# zunzun-ng

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  README.md  README.txt  TODO.md  cchk.toml  pyproject.toml  settings.py  urls.py  wsgi.py
.claude/: settings.json
.claude/agents/: fork-pattern-reviewer.md
.claude/hooks/: block_runtime_state.py  gh_pr_create_gate.py  py_compile_check.py
.claude/skills/add-fit-flow/: SKILL.md  fit_template.py
.claude/skills/run-funkload/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  commit-check.yml
commonproblems/: CHANGELOG  DEDICATION.txt  LargeStep_A.html  MissingOffset_A.html  Outlier_A.html  Outlier_B.html  ParallelData_A.html  PoorlyDefined_A.html  README.md  RandomData_A.html  Scatter_A.html  generateOutput.py  index.html
docs/deployment/: Caddyfile.example  README.md  linux.md  macos.md  windows.md
docs/internals/: active-gotchas.md
docs/operations/: quarterly-upgrade.md
docs/superpowers/plans/: 2026-04-17-cross-platform-migration.md  2026-04-18-django-upgrade.md  2026-04-19-django-6-upgrade.md  2026-04-19-pillow-gif-migration.md  2026-04-19-spline-udf-smoke.md  2026-04-20-pyeq3ng-odr-port.md  2026-04-20-zunzunng-branding.md  2026-05-26-status-page-redesign.md
docs/superpowers/specs/: 2026-04-17-cross-platform-design.md  2026-04-18-django-upgrade-design.md  2026-04-19-django-6-upgrade-design.md  2026-04-19-pillow-gif-design.md  2026-04-19-spline-udf-smoke-design.md  2026-04-20-pyeq3ng-odr-port-design.md  2026-04-20-zunzunng-branding-design.md  2026-05-26-status-page-redesign-design.md
scripts/: _lowercase_html_tags.py  bench_parallel.py  smoke_test.py
static/: AdditionalInfo.html  copy-code.js  custom.css
temp/static_images/: custom.css
templates/zunzun/: characterize_data_or_statistical_distributions_interface.html  equation_fit_interface.html  equation_fit_or_characterizer_results.html  exception_while_fitting_an_equation.html  feedback_reply.html  function_finder_interface.html  function_finder_results.html  generic_error.html  generic_page_template.html  home_page.html  invalid_form_data.html  list_all_equations.html  polyfunctional_css_style.html  status.html
templates/zunzun/divs/: about.html  coefficient_bounds_entry_div.html  data_entry_div.html  data_labels_div.html  data_point_options_3d_div.html  dedication.html  equation_family_inclusion_div.html  estimated_coefficient_entry_div.html  extended_equation_types_control_div.html  feedback_entry.html  fitting_target_div.html  fixed_coefficient_entry_div.html  graph_colors_div.html  graph_scale_div.html  graph_size_div.html  historical_note.html  polyfunctional_selection_div.html  polynomial_customization_div.html  polynomial_selection_div.html  polyrational_selection_div.html  rotation_angles_div.html  scientific_notation_div.html  server_load.html  smoothness_control_div.html  spline_control_div.html  stat_dist_sort_order_div.html  user_defined_function_entry_div.html
templates/zunzun/javascript/: JavascriptCommonToFunctionMatrices.js  JavascriptForEvaluateAtAPoint.js  JavascriptForFunctionMatrix2D.js  JavascriptForFunctionMatrix3D.js  JavascriptForRationalMatrix2D.js  JavascriptForRationalMatrix3D.js  StatusPoll.js
tests/: conftest.py  test_animation.py  test_check_if_still_used.py  test_child_payload.py  test_evaluate_at_a_point.py  test_fit_pool.py  test_form_labels.py  test_lrp_status.py  test_matrix_selector.py  test_perform_all_work_pipeline.py  test_pickle_spike.py  test_platform_compat.py  test_ratelimit.py  test_session_roundtrip.py  test_smoke.py  test_status_view.py  test_supersession_guard.py  test_urls.py  test_views_dispatch.py  test_views_per_user_cap.py  test_views_render.py  test_zunzun_max_workers_env.py
zunzun/: __init__.py  apps.py  formConstants.py  forms.py  middleware.py  models.py  parallel_pool.py  platform_compat.py  session_helpers.py  views.py
zunzun/LongRunningProcess/: CharacterizeData.py  ClassForAttachingProperties.py  DataObject.py  DefaultData.py  FitOneEquation.py  FitSpline.py  FitUserCustomizablePolynomial.py  FitUserDefinedFunction.py  FitUserSelectablePolyfunctional.py  FitUserSelectablePolynomial.py  FitUserSelectableRational.py  FittingBaseClass.py  FunctionFinder.py  FunctionFinderResults.py  MatplotlibGraphs_2D.py  MatplotlibGraphs_3D.py  ReportsAndGraphs.py  StatisticalDistributions.py  StatusMonitoredLongRunningProcessPage.py  __init__.py  _unique.py  child_payload.py  pid_trace.py
zunzun/migrations/: 0001_initial.py  0002_lrpstatus_completed.py  0003_alter_lrpstatus_current_status.py  0004_lrpstatus_state.py  0005_remove_lrpstatus_completed.py
