[project]
name = "zunzunsite3"
version = "0.0.0"
description = "Django site for 2D/3D curve and surface fitting via pyeq3 — Python 3 port of zunzun.com"
readme = "README.txt"
license = { file = "LICENSE.txt" }
requires-python = ">=3.14"
dependencies = [
    # Django 6.0 is a short-term support release, end-of-life around
    # December 2026. Next LTS is 6.2, expected April 2027. The site's
    # code uses only long-stable APIs (re_path, render, TEMPLATES
    # settings, default JSONSerializer). See docs/superpowers/specs/
    # 2026-04-18-django-upgrade-design.md and
    # docs/superpowers/specs/2026-04-19-django-6-upgrade-design.md
    # for migration history.
    "django>=6.0,<6.1",
    # django-ratelimit 4.x decorator signature: @ratelimit(key='ip',
    # rate='12/m', block=False). 3.x used a different API that would
    # silently accept but not honor these kwargs.
    "django-ratelimit>=4.0",
    "pyeq3",
    # numpy 2.x strict comparison semantics: numpy.array([]) != [] raises
    # rather than returning False. FittingBaseClass.estimatedCoefficients
    # relies on this (see commit history for the numpy-empty-array fix).
    "numpy>=2.0",
    "scipy",
    # matplotlib 3.2 removed the `normed=` kwarg in favor of `density=`.
    # MatplotlibGraphs_2D.py calls density=; older matplotlib TypeErrors.
    "matplotlib>=3.2",
    "reportlab",
    # Pillow powers matplotlib.animation.PillowWriter, which is used
    # directly by ScatterAnimation / SurfaceAnimation for 3D animated
    # GIF output. Pillow is also a transitive matplotlib dep; declaring
    # it explicitly documents the direct dependency.
    "pillow",
    "psutil",
    "beautifulsoup4",
    # lxml is the parser BeautifulSoup is invoked with in CreateReportPDF
    # (BeautifulSoup(html, "lxml")). bs4 itself does not install lxml; we
    # declare it explicitly so PDF generation works on a fresh `uv sync`.
    "lxml",
    "waitress>=3.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest>=7.0",
    "pytest-django>=4.5",
    "requests>=2.28",  # for scripts/smoke_test.py in later phases
    # Note: FunkLoad (used by funkload_tests/) is intentionally NOT listed
    # here. Its setup.py uses ez_setup, which was removed from setuptools
    # and cannot be built on Python 3.11+. If you need to run the FunkLoad
    # suite, install it manually in a separate Python 2.7 / Python 3.9 env,
    # or port the tests to pytest + requests (the test logic is just HTTP
    # asserts — see funkload_tests/test_Simple.py PostLongRunningProcess).
]

[tool.uv]
# No [build-system] → uv treats the project as virtual (a collection of
# top-level Django files, not an importable package). Only dependencies
# are installed; zunzunsite3 itself is never built as a wheel.
package = false

[tool.uv.sources]
# pyeq3 is pinned to the pyeq3ng fork (github.com/kiloscheffer/pyeq3ng)
# which removes the scipy.odr dependency (deprecated in scipy 1.17,
# removed in 1.19) in favor of the independent odrpack package on PyPI.
# Upstream pyeq3 has been dormant since 2020-01 and is not a PR
# target. See docs/superpowers/specs/2026-04-20-pyeq3ng-odr-port-design.md.
pyeq3 = { git = "https://github.com/kiloscheffer/pyeq3ng.git", tag = "v1.0.0-ng" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# Don't let pytest try to collect the funkload_tests directory
# (its test files need a live server, not pytest, and importing them fails)
norecursedirs = ["funkload_tests", ".venv", "temp", "session_db"]
